--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,8 @@
     "react-native-reanimated": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-gesture-handler": "^1.4.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "reactotron-react-native": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
