--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,7 +18,9 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-gesture-handler": "^1.4.1",
     "styled-components": "^4.4.0",
-    "reactotron-react-native": "^4.0.2"
+    "reactotron-react-native": "^4.0.2",
+    "react-navigation-tabs": "^2.5.6",
+    "react-native-linear-gradient": "^2.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
